# receipt-scanner-frontend/src/pages/ForgotPassword/types.ts
@@ -1,0 +1,9 @@
+export interface UseForgotPasswordControllerReturn {
+  email: string;
+  resetToken: string;
+  error: string;
+  successMessage: string;
+  handleEmailChange: (e: React.ChangeEvent<HTMLInputElement>) => void;
+  handleSubmit: () => Promise<void>;
+  goToResetPassword: () => void;
+}
